# MIRAGE_v2

./: .gitignore  ANALYSE_ALIGNEMENT_BRIEF_INITIAL.md  CHANGELOG.md  Dockerfile  Dockerfile.dev  Dockerfile.minimal  GUIDE_TEST_FINAL.md  HISTORIQUE_DIFFICULTES_SOLUTIONS.md  LICENSE  MIGRATION_GUIDE.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_REPORT.md  PHASE_1_FINALISATION_REPORT.md  PHASE_2_FINALISATION_REPORT.md  PLAN_STRATEGIQUE_MIRAGE_v2.md  PLAN_STRATEGIQUE_MIRAGE_v2_ETAT_ACTUEL.md  PLAN_TEST_COMPLET.md  PLAN_TEST_COMPLET_v2.md  RAPPORT_OPTIMISATION_FINAL.md  README.md  ROADMAP_STRATEGIQUE_MIRAGE_v2.md  STRESS_TEST_PLAN.md  TECHNICAL_NOTES.md  advanced_rag_manager.py  clean_start.sh  debug_agents.py  docker-compose.minimal.yml  docker-compose.yml  enhanced_api.py  env.template  mirage-docker.sh  mirage-minimal.sh  pyproject.toml  pytest.ini  requirements-minimal.txt  requirements.txt  run_tests.sh  simple_api.py  simple_orchestrator.py  start_web_interface.sh  (+4 more)
backups/20250914_134839/: README.md  hybrid_service.py  main.py  pyproject.toml  test_questions.txt  web_interface.py
backups/20250914_134839/agents/: __init__.py  agent_prompts.py  generator_agent.py  reformer_agent.py  translator_agent.py  verifier_agent.py
backups/20250914_134839/api/: __init__.py
backups/20250914_134839/cli/: __init__.py
backups/20250914_134839/monitoring/: metrics.py
backups/20250914_134839/orchestrator/: __init__.py  human_loop_manager.py  orchestrator.py  workflow_manager.py
backups/20250914_134839/rag/: document_processor.py  metadata_manager.py  rag_engine.py
backups/20250914_134839/raw_documents/: Data analysis process.docx  test_pharmaceutical.txt
backups/20250914_165040/: BACKUP_REPORT.md  CHANGELOG.md  README_updated.md  TECHNICAL_NOTES.md  rag_index.json  web_interface.py
backups/20250914_165040/agents/: generator_agent.py  reformer_agent.py  translator_agent.py  verifier_agent.py
backups/20250914_190600/: BACKUP_REPORT.md  TEST_RESULTS.md
config/: prometheus.yml
config/nginx/: nginx.conf
data/embeddings_1758221135/: meta.json
data/embeddings_1758234642/: meta.json
docs/: ARCHITECTURE.md  DATA_SCHEMAS.md  DEVELOPER_GUIDE.md  RUNBOOK.md  USER_GUIDE.md
maintenance_reports/: maintenance_report_20250918_185805.txt  maintenance_report_20250918_190647.txt
quality_reports/: api_quality_report_20250918_185326.txt
scripts/: api_preventive_validation.py  api_quality_monitor.py  api_quality_test.py  deploy.sh  preventive_validation.py  quality_maintenance.py  quality_maintenance_automated.py  quality_monitor.py  run_stress_test.sh  validate_rag_stats.py
src/agents/: agent_manager.py  agent_prompts.py  enhanced_language_detection.py  generator_agent.py  reformer_agent.py  simple_agents.py  simple_language_detection.py  translator_agent.py  verifier_agent.py
src/cli/: commands.py
src/monitoring/: __init__.py
src/orchestrator/: consensus_manager.py  ethical_fallback_system.py  human_loop_manager.py  multi_agent_orchestrator.py  optimized_multi_agent_orchestrator.py  simple_ethical_fallback.py  simple_human_loop.py  simple_orchestrator.py
src/rag/: __init__.py  alternative_embedding_manager.py  document_processor.py  embedding_manager.py  rag_engine.py  simple_rag_engine.py
templates/: index_simple.html
validation_reports/: api_validation_report_20250918_190255.txt  api_validation_report_20250918_190635.txt  api_validation_report_20250918_190658.txt  api_validation_report_20250918_191248.txt  api_validation_report_20250918_191451.txt  api_validation_report_20250918_191531.txt
(+10 files in other folders)
